# momentobooth

./: .env.example  .gitignore  .gitmodules  CHANGELOG.md  CLAUDE.md  Gemfile  Matchfile  README.md  analysis_options.yaml  build.yaml  distribute_options.yaml  flutter_rust_bridge.yaml  justfile  l10n.yaml  pubspec.yaml  template.config.js
.fvm/: flutter_sdk  fvm_config.json
.github/: dependabot.yml
.github/workflows/: deploy-documentation.yml  pr-ci-app-linux-appimage-x64.yml  pr-ci-app-macos-arm64.yml  pr-ci-app-win-x64-libgphoto2-from-git.yml  pr-ci-app-win-x64.yml  pr-ci-app.yml  pr-ci-documentation.yml  pr-ci.yml  release-linux-appimage-x64.yml  release-macos-arm64.yml  release-macos-x64.yml  release-win-x64.yml
.templates/view/: __templateNameToSnakeCase__.dart  __templateNameToSnakeCase___controller.dart  __templateNameToSnakeCase___screen_controller.dart  __templateNameToSnakeCase___screen_view.dart  __templateNameToSnakeCase___screen_view_model.dart  __templateNameToSnakeCase___view.dart  __templateNameToSnakeCase___view_model.dart
android/app/: build.gradle
assets/animations/: Animation - 1708738963082.json  Animation - 1709936404300.json  Animation - 1710968427507.json  Animation - 1764508028194.json
assets/scripts/: sony_remote_capture_photo.au3
assets/shaders/: starfield-dots.frag  starfield-dots.frag.original  starfield-dots.json
assets/sounds/: README
documentation/: book.toml
documentation/src/: SUMMARY.md  camera_setup.md  cli.md  concept.md  dev_setup.md  event_checklist.md  getting_started.md  hardware_compatibility.md  installation.md  introduction.md  peripherals-setup.md  printer_setup.md  settings_debug.md  settings_face_recognition.md  (+13 more)
fastlane/: Fastfile  README.md
lib/: app.dart  app.hotkeys.dart  app.routes.dart  app_localizations.dart  bridge_definitions.dart  capture-photo.au3  ffi.io.dart  main.dart  main.routes.dart  main.shortcuts.dart  momento_booth_app.dart  momento_booth_app.hotkeys.dart  momento_booth_app.routes.dart  off_topic_code.dart  router.dart  router.gr.dart  widgetbook.dart
linux/: CMakeLists.txt  my_application.cc  rust.cmake
macos/: .gitignore  Podfile  bundle.py  ci_adapt_pkgconf_dirs.sh  ci_bundle_libraries.py  ci_download_deps.sh  ci_resign_everything.py
misc/: capture-photo.au3  fix_ffi_for_dart3.py
rust/: .gitignore  Cargo.toml  build.rs  cargokit.yaml  nokhwa-fix-issue-98.patch
rust/flutter_rust_bridge_example.xcodeproj/: project.pbxproj
rust/momento_booth_native_helpers.xcodeproj/: project.pbxproj
rust/src/: bridge_generated.rs  helpers.rs  lib.rs  logging.rs  main.rs  off_topic_code.rs
rust/src/api/: cups.rs  debug.rs  ffsend.rs  gphoto2.rs  images.rs  initialization.rs  jpeg.rs  logging.rs  mod.rs  noise.rs  nokhwa.rs  printing.rs  sfx.rs  simple.rs
rust/src/dart_bridge/: api.rs  mod.rs
rust/src/hardware_control/: mod.rs
rust/src/hardware_control/live_view/: gphoto2.rs  mod.rs  nokhwa.rs  nokhwa_capture_device.rs  nokhwa_capturing.rs  white_noise.rs
rust/src/hardware_control/printing/: escpos.rs  mod.rs
rust/src/hardware_control/sfx/: mod.rs  sfx.rs
rust/src/models/: gphoto2.rs  image_operations.rs  images.rs  live_view.rs  logging.rs  mod.rs  receipt_printing.rs  version_info.rs
rust/src/utils/: ffsend_client.rs  flutter_texture.rs  image_processing.rs  ipp.rs  ipp_client.rs  jpeg.rs  jpeg_encoder.rs  mimalloc.rs  mod.rs
rust_builder/: pubspec.yaml
test/: widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt  bundle_libs.ps1  rust.cmake
(+629 files in other folders)
