[package]
name = "rust_lib_momento_booth"
version = "0.2.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = { version = "=2.11.1", features = ["chrono"] }
anyhow = "1.0.98"
ffsend-api = "0.7.3"
serde_json = "1.0.140"
chrono = "0.4.41"
image = { version = "0.25.6", features = ["rayon"] }
ipp = "5.3.1"
zune-jpeg = "0.4.19"
jpeg-encoder = "0.6.1"
dlopen = "0.1.8"
noise = "0.9.0"
dashmap = "6.1.0"
turborand = "0.10.1"
pathsep = "0.1.1"
tokio = { version = "1.46.1", features = ["rt-multi-thread"] }
gphoto2 = "3.4.1"
ahash = "0.8.12"
img-parts = "0.3.3"
little_exif = "0.6.11"
url = "2.5.4"
num = "0.4.3"
num-traits = "0.2.19"
num-derive = "0.4.2"
rexiv2 = { version = "0.10.0", features = ["raw-tag-access"] }
gexiv2-sys = "1.4.0"
regex = "1.11.1"
log = "0.4.27"
nokhwa = { git = "https://github.com/l1npengtul/nokhwa.git", branch = "0.10", features = ["input-native", "output-threaded"] }
parking_lot = "0.12.4"
susync = "0.2.0"
rustc_version_runtime = "0.3.0"
libc = "0.2.174"
libusb-sys = "0.2.3"
futures = "0.3.31"
kira = "0.10.8"
snafu = "0.8.6"

[build-dependencies]
bindgen = "0.72.0"
pkg-config = "0.3.32"

[profile.dev]
opt-level = 3
